# togger

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
docker/: README.md
migrations/: env.py
migrations/versions/: 17c77f7a8860_.py  8af9f3313560_.py  8d0d09f3990a_.py  fadd836fb9b1_.py
tests/dummy/: dummy_test.py
tests/notifications/usecase/: test_notify.py
tests/test_example/: test_hello.py
togger/: __init__.py  __main__.py  database.py  default_settings.py  main.py
togger/auth/: auth.py  auth_api.py  auth_dao.py  auth_forms.py  models.py
togger/calendar/: calendar.py  calendar_api.py  calendar_dao.py  calendar_forms.py  models.py
togger/event/: event.py  event_api.py  event_dao.py  models.py
togger/notifications/: dtos.py
togger/notifications/adapters/db/: querybuilders.py
togger/notifications/adapters/sender/: mail_sender.py
togger/notifications/interfaces/db/: __init__.py  gateways.py
togger/notifications/interfaces/sender/: gateways.py
togger/notifications/usecase/: notify.py
