# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "togger"
version = "0.1.0"
description = "Awesome `togger` is a Python cli/package created with https://github.com/TezRomacH/python-package-template"
readme = "README.md"
authors = [
  "jb-delafosse <hello@togger.com>"
]
license = "MIT"
repository = "https://github.com/jb-delafosse/togger"
homepage = "https://github.com/jb-delafosse/togger"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"togger" = "togger.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^3.3.0", python = "<3.8"}
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.2.1"
python-dateutil = "^2.8.1"
Flask-Login = "^0.5.0"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
Flask-SQLAlchemy = "^2.4.4"
Werkzeug = "^1.0.1"
SQLAlchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"
pytz = "^2020.5"
Flask-Migrate = "^2.5.3"
flask-talisman = "^0.7.0"
WTForms = "^2.3.3"
alembic = "^1.4.3"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
darglint = "^1.5.4"
isort = "^5.5.4"
pyupgrade = "^2.7.2"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.6.2"
safety = "^1.10.0"
pytest = "^6.2.1"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"
pre-commit = "^2.7.1"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
